--- a/src/CSS/news.css
+++ b/src/CSS/news.css
@@ -25,6 +25,7 @@
   padding: 1.73rem;
   background-color: white;
   outline: 0;
+  text-align: start;
   box-shadow: 1px 3px 9px 3px rgb(125, 190, 246);
 }
 
